--- a/STM32Cube_FW_WL_V1.3.0/Projects/NUCLEO-WL55JC/Applications/LoRaWAN/LoRaWAN_AT_Slave_TCXO/MDK-ARM/LoRaWAN_AT_Slave/LoRaWAN_AT_Slave.build_log.htm
+++ b/STM32Cube_FW_WL_V1.3.0/Projects/NUCLEO-WL55JC/Applications/LoRaWAN/LoRaWAN_AT_Slave_TCXO/MDK-ARM/LoRaWAN_AT_Slave/LoRaWAN_AT_Slave.build_log.htm
@@ -21,107 +21,107 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
 Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
-C:\STM32Cube_FW_WL_V1.3.0\Projects\NUCLEO-WL55JC\Applications\LoRaWAN\LoRaWAN_AT_Slave_TCXO\MDK-ARM\LoRaWAN_AT_Slave.uvprojx
+D:\GitHub\IT007\RC-WLE5-868\STM32Cube_FW_WL_V1.3.0\Projects\NUCLEO-WL55JC\Applications\LoRaWAN\LoRaWAN_AT_Slave_TCXO\MDK-ARM\LoRaWAN_AT_Slave.uvprojx
 Project File Date:  09/16/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.13.1', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'LoRaWAN_AT_Slave'
 assembling startup_stm32wl55xx_cm4.s...
-compiling gpio.c...
-compiling main.c...
 compiling dma.c...
+compiling gpio.c...
 compiling stm32_lpm_if.c...
 compiling flash_if.c...
+compiling main.c...
 compiling adc.c...
 compiling sys_app.c...
 compiling sys_debug.c...
 compiling usart_if.c...
+compiling timer_if.c...
 compiling usart.c...
 compiling adc_if.c...
-compiling timer_if.c...
-compiling subghz.c...
 compiling rtc.c...
+compiling subghz.c...
 compiling stm32wlxx_it.c...
-compiling app_lorawan.c...
 compiling radio_board_if.c...
+compiling app_lorawan.c...
 compiling stm32wlxx_hal_msp.c...
 compiling lora_app.c...
+compiling lora_at.c...
 compiling lora_command.c...
 compiling test_rf.c...
-compiling lora_at.c...
-compiling lora_info.c...
 compiling stm32wlxx_nucleo.c...
+compiling lora_info.c...
 compiling stm32wlxx_nucleo_radio.c...
-compiling stm32wlxx_ll_adc.c...
 compiling stm32wlxx_hal_adc_ex.c...
+compiling stm32wlxx_ll_adc.c...
 compiling stm32wlxx_hal_adc.c...
 compiling stm32wlxx_hal_rcc_ex.c...
-compiling stm32wlxx_hal_rcc.c...
 compiling stm32wlxx_hal_flash.c...
+compiling stm32wlxx_hal_rcc.c...
 compiling stm32wlxx_hal_flash_ex.c...
+compiling stm32wlxx_hal_dma_ex.c...
 compiling stm32wlxx_hal_gpio.c...
 compiling stm32wlxx_hal_dma.c...
-compiling stm32wlxx_hal_dma_ex.c...
+compiling stm32wlxx_hal_pwr_ex.c...
 compiling stm32wlxx_hal_pwr.c...
 compiling stm32wlxx_hal_cortex.c...
-compiling stm32wlxx_hal_pwr_ex.c...
-compiling stm32wlxx_hal_exti.c...
 compiling stm32wlxx_hal.c...
-compiling stm32wlxx_hal_uart_ex.c...
+compiling stm32wlxx_hal_exti.c...
 compiling stm32wlxx_hal_uart.c...
+compiling stm32wlxx_hal_uart_ex.c...
 compiling stm32wlxx_hal_rtc.c...
+compiling stm32wlxx_hal_tim.c...
 compiling stm32wlxx_hal_rtc_ex.c...
 compiling stm32wlxx_hal_subghz.c...
-compiling stm32wlxx_hal_tim.c...
 compiling stm32wlxx_hal_tim_ex.c...
 compiling system_stm32wlxx.c...
-compiling LmhpCompliance.c...
-compiling LmhpPackagesRegistration.c...
 compiling cmac.c...
 compiling lorawan_aes.c...
+compiling LmhpPackagesRegistration.c...
+compiling LmhpCompliance.c...
 compiling soft-se.c...
-compiling RegionAS923.c...
-compiling RegionBaseUS.c...
 compiling Region.c...
+compiling RegionAS923.c...
 compiling RegionAU915.c...
+compiling RegionCN470A20.c...
+compiling RegionBaseUS.c...
 compiling RegionCN470.c...
 compiling RegionCN470A26.c...
-compiling RegionCN470A20.c...
 compiling RegionCN470B20.c...
 compiling RegionCN470B26.c...
-compiling RegionEU433.c...
 compiling RegionCN779.c...
-compiling RegionCommon.c...
-compiling RegionIN865.c...
+compiling RegionEU433.c...
 compiling RegionEU868.c...
+compiling RegionIN865.c...
+compiling RegionCommon.c...
 compiling RegionKR920.c...
 compiling RegionRU864.c...
-compiling RegionUS915.c...
 compiling LoRaMacAdr.c...
+compiling RegionUS915.c...
 compiling LoRaMacCommands.c...
-compiling LoRaMacClassB.c...
 compiling LoRaMacConfirmQueue.c...
-compiling LoRaMacCrypto.c...
+compiling LoRaMacClassB.c...
 compiling LoRaMac.c...
 compiling LoRaMacParser.c...
-compiling NvmDataMgmt.c...
+compiling LoRaMacCrypto.c...
 compiling LoRaMacSerializer.c...
-compiling LmHandler.c...
+compiling NvmDataMgmt.c...
 compiling utilities.c...
-compiling stm32_mem.c...
-compiling radio_driver.c...
-compiling stm32_adv_trace.c...
+compiling LmHandler.c...
 compiling radio.c...
 compiling radio_fw.c...
-compiling stm32_tiny_sscanf.c...
+compiling stm32_adv_trace.c...
+compiling stm32_mem.c...
 compiling stm32_systime.c...
-compiling stm32_lpm.c...
+compiling radio_driver.c...
+compiling stm32_tiny_sscanf.c...
 compiling stm32_tiny_vsnprintf.c...
 compiling stm32_seq.c...
+compiling stm32_lpm.c...
 compiling stm32_timer.c...
 linking...
-Program Size: Code=69576 RO-data=8644 RW-data=308 ZI-data=41484  
+Program Size: Code=69660 RO-data=8644 RW-data=308 ZI-data=41484  
 FromELF: creating hex file...
 "LoRaWAN_AT_Slave\LoRaWAN_AT_Slave.axf" - 0 Error(s), 0 Warning(s).
 
@@ -146,7 +146,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:29
+Build Time Elapsed:  00:01:00
 </pre>
 </body>
 </html>
